Fixed the 5 pixels shift
I dont know why this was needed

--- a/style/style.less
+++ b/style/style.less
@@ -59,7 +59,7 @@ button{
     }
 }
 #result{
-    margin-left:155px;
+    margin-left:160px;
 }
 
 
